<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="account_options">Account options</string>
    <string name="account_type_fanfou">Fanfou</string>
    <string name="account_type_mastodon">Mastodon</string>
    <string name="account_type_statusnet">StatusNet</string>
    <string name="account_type_twitter">Twitter</string>
    <string name="antiBot_preferences_name">abtpref</string>
    <string name="action_accept_friend_request">Accept</string>
    <string name="action_accept_permission_request">Accept</string>
    <string name="action_add">Add</string>
    <string name="action_add_content_warning">Add content warning</string>
    <string name="action_add_conversation_participant">Add member</string>
    <string name="action_add_filter_rule">Add rule</string>
    <string name="action_add_filters_subscription">Add subscription</string>
    <string name="action_add_gif">Add GIF</string>
    <string name="action_add_media">Add media</string>
    <string name="action_add_member">Add member</string>
    <string name="action_add_name_to_home_screen">Add <xliff:g example="Name" id="name">%1$s</xliff:g> to home screen</string>
    <string name="action_add_tab">Add tab</string>
    <string name="action_add_tab_to_home_screen">Add tab to home screen</string>
    <string name="action_add_to_filter">Add to filter</string>
    <string name="action_add_to_home_screen">Add to home screen</string>
    <string name="action_add_to_home_screen_more">Add to home screen…</string>
    <string name="action_add_to_list">Add to list</string>
    <string name="action_block">Block</string>
    <string name="action_buffer_disconnect">Disconnect from Buffer</string>
    <string name="action_buffer_settings">Settings</string>
    <string name="action_buffer_update_now">Publish now</string>
    <string name="action_cancel_retweet">Cancel retweet</string>
    <string name="action_center">Center</string>
    <string name="action_change_language">Change language</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_messages">Clear messages</string>
    <string name="action_clear_messages_and_delete_conversation">Clear and delete conversation</string>
    <string name="action_comment">Comment</string>
    <string name="action_compose">Compose</string>
    <string name="action_compose_message_convert_to_status">Convert to tweet</string>
    <string name="action_connect_to_buffer">Connect</string>
    <string name="action_conversation_info">Conversation info</string>
    <string name="action_create_conversation">Create conversation</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_messages">Delete messages</string>
    <string name="action_disable_promotions">Disable promotions</string>
    <string name="action_dont_restart">Don\'t restart</string>
    <string name="action_dont_terminate">Don\'t quit</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_conversation_avatar">Edit icon</string>
    <string name="action_edit_conversation_name">Edit name</string>
    <string name="action_edit_filter_rule">Edit rule</string>
    <string name="action_enable">Enable</string>
    <string name="action_enable_notifications">Enable notifications</string>
    <string name="action_enable_promotions">Enable promotions</string>
    <string name="action_enable_retweets">Enable retweets</string>
    <string name="action_export_to_muted_users">Export to muted users</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_filter_import_from_blocked_users">Import from blocked users</string>
    <string name="action_filter_import_from_muted_users">Import from muted users</string>
    <string name="action_filter_subscriptions_card_manage">Manage subscriptions</string>
    <string name="action_finish">Finish</string>
    <string name="action_follow">Follow</string>
    <string name="action_format_search_update_status">Tweet <xliff:g id="text">%1$s</xliff:g></string>
    <string name="action_import">Import</string>
    <string name="action_import_from">Import from…</string>
    <string name="action_invert_selection">Invert selection</string>
    <string name="action_later">Later</string>
    <string name="action_leave_conversation">Leave conversation</string>
    <string name="action_like">Like</string>
    <string name="action_location">Location</string>
    <string name="action_manage_in_buffer">Manage in Buffer</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mute">Mute</string>
    <string name="action_mute_notifications">Mute notifications</string>
    <string name="action_name_saved_at_time"><xliff:g id="action">%1$s</xliff:g>, saved at <xliff:g id="time">%2$s</xliff:g></string>
    <string name="action_next_step">Next</string>
    <string name="action_no_thanks">No, thanks</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_pick_color">Pick color</string>
    <string name="action_purchase">Purchase</string>
    <string name="action_purchase_features_pack">Buy features pack</string>
    <string name="action_qr_code">QR code</string>
    <string name="action_quote">Quote</string>
    <string name="action_record_video">Record video</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_launch_presentations">Refresh launch screens</string>
    <string name="action_register">Register</string>
    <string name="action_remove_conversation_avatar">Remove icon</string>
    <string name="action_reply">Reply</string>
    <string name="action_report_spam">Report spam</string>
    <string name="action_restore_purchase">Restore</string>
    <string name="action_retry">Retry</string>
    <string name="action_retweet">Retweet</string>
    <string name="action_save">Save</string>
    <string name="action_save_to">Save to…</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_none">Select none</string>
    <string name="action_select_user">Select user</string>
    <string name="action_send">Send</string>
    <string name="action_set_color">Set color</string>
    <string name="action_set_nickname">Set nickname</string>
    <string name="action_set_status_visibility">Set visibility</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_skip">Skip</string>
    <string name="action_start">Start</string>
    <string name="action_status_attachment">Tweet attachment</string>
    <string name="action_status_block_users">Block users…</string>
    <string name="action_status_mute_users">Mute users…</string>
    <string name="action_status_pin">Pin tweet</string>
    <string name="action_status_schedule">Tweet schedule</string>
    <string name="action_status_unpin">Unpin tweet</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_sync_connect_to_storage">Connect</string>
    <string name="action_sync_disconnect">Disconnect</string>
    <string name="action_sync_settings">Settings</string>
    <string name="action_sync_sync_now">Sync now</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_toggle">Toggle</string>
    <string name="action_translate">Translate</string>
    <string name="action_twitter_mute_user">Mute user</string>
    <string name="action_twitter_muted_users">Muted users</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_undo_like">Undo like</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_view_map">Map</string>
    <string name="activated_accounts">Activated accounts</string>
    <string name="activities_about_me">Activities about me</string>
    <string name="activity_about_me_favorite"><xliff:g id="user">%s</xliff:g> favorited</string>
    <string name="activity_about_me_favorite_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> favorited</string>
    <string name="activity_about_me_favorited_media_tagged"><xliff:g id="user">%s</xliff:g> favorited a tweet you were tagged in</string>
    <string name="activity_about_me_favorited_media_tagged_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> favorited a tweet you were tagged in</string>
    <string name="activity_about_me_favorited_mention"><xliff:g id="user">%s</xliff:g> favorited a tweet you were mentioned in</string>
    <string name="activity_about_me_favorited_mention_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> favorited a tweet you were mentioned in</string>
    <string name="activity_about_me_favorited_retweet"><xliff:g id="user">%s</xliff:g> favorited your retweet</string>
    <string name="activity_about_me_favorited_retweet_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> favorited your retweet</string>
    <string name="activity_about_me_follow"><xliff:g id="user">%s</xliff:g> is following you</string>
    <string name="activity_about_me_follow_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> are following you</string>
    <string name="activity_about_me_like"><xliff:g id="user">%s</xliff:g> liked</string>
    <string name="activity_about_me_like_multi"><xliff:g id="user">%1$s</xliff:g> and <xliff:g id="other">%2$s</xliff:g> liked</string>
    <string name="background">Background</string>
    <string name="color">Color</string>
    <string name="content_to_notify">Content to notify</string>
    <string name="drawer_toggle">Drawer toggle</string>
    <string name="emoji_support">Emoji support</string>
    <string name="following_only">Your following only</string>
    <string name="following_only_summary">Display notifications from users you follow only.</string>
    <string name="import_export_settings">Import/Export settings</string>
    <string name="mentions_only">Mentions only</string>
    <string name="network_diagnostics">Network diagnostics</string>
    <string name="notification_light_color">Light Color</string>
    <string name="notification_type_home">Home</string>
    <string name="notification_type_interactions">Interactions</string>
    <string name="notification_type_messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_type">Notifications type</string>
    <string name="other_settings">Other settings</string>
    <string name="preference_filter_possibility_sensitive_statuses">Filter sensitive tweets</string>
    <string name="preference_filter_unavailable_quote_statuses">Filter unavailable quotes</string>
    <string name="preference_summary_sync_timeline_positions">When \"Remember position\" enabled</string>
    <string name="preference_title_filter_manage_subscriptions">Manage</string>
    <string name="preference_title_filter_subscriptions">Filter subscriptions</string>
    <string name="preference_title_navbar_style">Navbar style</string>
    <string name="preference_title_notification_ringtone">Ringtone</string>
    <string name="preference_title_override_language">App language</string>
    <string name="preference_title_timeline_positions">Timeline positions</string>
    <string name="scrapyard">Scrapyard</string>
    <string name="theme">Theme</string>
    <string name="title_drafts">Drafts</string>
    <string name="title_filters">Filters</string>
    <string name="title_nicknames">Nicknames</string>
    <string name="title_user_colors">User colors</string>
</resources>