<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/notifications">

    <org.mariotaku.twidereAntiBot.preference.NotificationContentPreference
        android:key="content_to_notify"
        android:title="@string/content_to_notify"/>

    <org.mariotaku.twidereAntiBot.preference.RingtonePreference
        android:key="notification_ringtone"
        android:ringtoneType="notification"
        android:showDefault="true"
        android:showSilent="true"
        android:title="@string/preference_title_notification_ringtone"/>

    <org.mariotaku.twidereAntiBot.preference.ColorPickerPreference
        android:key="notification_light_color"
        android:title="@string/notification_light_color"
        app:defaultColor="@color/branding_color"/>

    <org.mariotaku.twidereAntiBot.preference.TintedPreferenceCategory
        android:key="cat_notifications_type"
        android:title="@string/notifications_type">
        <org.mariotaku.twidereAntiBot.preference.NotificationTypePreference
            android:key="notification_type_home"
            android:title="@string/notification_type_home"
            app:dependencyKey="home_timeline_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="none"/>
        <org.mariotaku.twidereAntiBot.preference.NotificationTypePreference
            android:key="notification_type_mentions"
            android:title="@string/notification_type_interactions"
            app:dependencyKey="mentions_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="vibration|light"/>
        <org.mariotaku.twidereAntiBot.preference.NotificationTypePreference
            android:key="notification_type_direct_messages"
            android:title="@string/notification_type_messages"
            app:dependencyKey="direct_messages_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="ringtone|vibration|light"/>
    </org.mariotaku.twidereAntiBot.preference.TintedPreferenceCategory>
    <org.mariotaku.twidereAntiBot.preference.TintedPreferenceCategory
        android:key="cat_other_settings"
        android:title="@string/other_settings">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="notification_following_only"
            android:summary="@string/following_only_summary"
            android:title="@string/following_only"/>
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="notification_mentions_only"
            android:title="@string/mentions_only"/>
    </org.mariotaku.twidereAntiBot.preference.TintedPreferenceCategory>

</PreferenceScreen>