<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.mariotaku.twidereAntiBot.preference.sync.SyncItemPreference
        android:defaultValue="true"
        android:title="@string/title_drafts"
        app:syncType="drafts"/>
    <org.mariotaku.twidereAntiBot.preference.sync.SyncItemPreference
        android:defaultValue="true"
        android:title="@string/title_filters"
        app:syncType="filters"/>
    <org.mariotaku.twidereAntiBot.preference.sync.SyncItemPreference
        android:defaultValue="true"
        android:title="@string/title_nicknames"
        app:syncType="user_nicknames"/>
    <org.mariotaku.twidereAntiBot.preference.sync.SyncItemPreference
        android:defaultValue="true"
        android:title="@string/title_user_colors"
        app:syncType="user_colors"/>
    <org.mariotaku.twidereAntiBot.preference.sync.SyncItemPreference
        android:defaultValue="true"
        android:summary="@string/preference_summary_sync_timeline_positions"
        android:title="@string/preference_title_timeline_positions"
        app:syncType="timeline_positions"/>
</PreferenceScreen>