<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/other_settings">

    <org.mariotaku.twidereAntiBot.preference.SettingsImportExportPreference
        android:key="import_export_settings"
        android:title="@string/import_export_settings"/>

    <Preference
        android:fragment="org.mariotaku.twidereAntiBot.fragment.SettingsDetailsFragment"
        android:title="@string/scrapyard">
        <extra
            android:name="resid"
            android:value="@xml/preferences_scrapyard"/>
    </Preference>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="drawer_toggle"
        android:title="@string/drawer_toggle">
        <extra
            android:name="should_recreate"
            android:value="true"/>
    </SwitchPreferenceCompat>

    <org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference
        android:defaultValue=""
        android:entries="@array/values_app_languages"
        android:entryValues="@array/entries_app_languages"
        android:key="override_language"
        android:title="@string/preference_title_override_language">
        <extra
            android:name="should_restart"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference>

    <Preference
        android:fragment="org.mariotaku.twidereAntiBot.fragment.NetworkDiagnosticsFragment"
        android:title="@string/network_diagnostics"/>

</PreferenceScreen>