<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="filter_unavailable_quote_statuses"
        android:title="@string/preference_filter_unavailable_quote_statuses"/>
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="filter_possibility_sensitive_statuses"
        android:title="@string/preference_filter_possibility_sensitive_statuses"/>
    <org.mariotaku.twidereAntiBot.preference.PremiumEntryPreferenceCategory android:title="@string/preference_title_filter_subscriptions">
        <org.mariotaku.twidereAntiBot.preference.PremiumEntryPreference
            android:key="manage_filter_subscriptions"
            android:title="@string/preference_title_filter_manage_subscriptions">
            <intent
                android:data="twidere://filters/subscriptions"
                android:targetClass="org.mariotaku.twidereAntiBot.activity.LinkHandlerActivity"
                android:targetPackage="org.mariotaku.twidereAntiBot"/>
        </org.mariotaku.twidereAntiBot.preference.PremiumEntryPreference>
    </org.mariotaku.twidereAntiBot.preference.PremiumEntryPreferenceCategory>
</PreferenceScreen>