<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/theme">

    <org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference
        android:defaultValue="light"
        android:entries="@array/entries_theme"
        android:entryValues="@array/values_theme"
        android:key="theme"
        android:order="21"
        android:title="@string/theme">
        <extra
            android:name="should_recreate"
            android:value="true"/>
        <extra
            android:name="recreate_activity"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference>

    <org.mariotaku.twidereAntiBot.preference.ThemeBackgroundPreference
        android:defaultValue="default"
        android:order="22"
        android:title="@string/background">
        <extra
            android:name="should_restart"
            android:value="true"/>
        <extra
            android:name="recreate_activity"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.ThemeBackgroundPreference>

    <org.mariotaku.twidereAntiBot.preference.ColorPickerPreference
        android:key="theme_color"
        android:order="23"
        android:title="@string/color"
        app:defaultColor="@color/branding_color">
        <extra
            android:name="should_recreate"
            android:value="true"/>
        <extra
            android:name="recreate_activity"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.ColorPickerPreference>

    <org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference
        android:entries="@array/entries_navbar_style"
        android:entryValues="@array/values_navbar_style"
        android:key="navbar_style"
        android:order="24"
        android:title="@string/preference_title_navbar_style">
        <extra
            android:name="should_recreate"
            android:value="true"/>
        <extra
            android:name="recreate_activity"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.EntrySummaryListPreference>

    <org.mariotaku.twidereAntiBot.preference.EmojiSupportPreference
        android:key="emoji_support"
        android:order="25"
        android:title="@string/emoji_support">
        <extra
            android:name="should_recreate"
            android:value="true"/>
    </org.mariotaku.twidereAntiBot.preference.EmojiSupportPreference>

</PreferenceScreen>